--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -32,6 +32,7 @@ $hostname\
 $sudo\
 $directory\
 $git_branch$git_commit$git_state$git_metrics$git_status\
+$python\
 $jobs\
 $memory_usage\
 [ ](fg:#242424)\
@@ -198,3 +199,10 @@ disabled = false
 format = '[$localipv4 ](fg:green bold)'
 ssh_only = true
 disabled = false
+
+[python]
+format = "via [${symbol}${pyenv_prefix}${version} (${virtualenv})]($style) "
+pyenv_version_name = false
+pyenv_prefix = "pyenv "
+style = "yellow"
+symbol = " "
