--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -27,12 +27,11 @@
 format = """
 [╭╴](fg:#505050)\
 $os\
-$username\
-$hostname\
 $sudo\
 $directory\
 $git_branch$git_commit$git_state$git_metrics$git_status\
 $python\
+$rust\
 $jobs\
 $memory_usage\
 [ ](fg:#242424)\
@@ -41,7 +40,6 @@ $fill\
 $line_break\
 [╰╴](fg:#505050)\
 [$status\
-$localip\
 $character]($style)
 """
 
@@ -51,8 +49,8 @@ add_newline = true
 # Customization and activation of some modules:
 # Listed in the order of their position in the module row above
 [os]
-format = "[$symbol ]($style)[ ]()"
-style = "fg:#AAAAAA"
+format = "[$symbol ]($style)[| ](fg:white bold)"
+style = "fg:#1793d1"
 disabled = false
 
 [os.symbols]
@@ -116,7 +114,7 @@ symbol = '  ❯ ' # ' ❯ '
 disabled = false
 
 [directory]
-format = '[](fg:cyan bold)[$read_only]($read_only_style)[$repo_root]($repo_root_style)[$path ]($style)'
+format = '[](fg:white bold)[$read_only]($read_only_style)[$repo_root]($repo_root_style)[$path]($style)'
 style = 'fg:cyan bold'
 home_symbol = '  ~ '
 read_only = ' ' # ' ' # ' ''
@@ -206,3 +204,9 @@ pyenv_version_name = false
 pyenv_prefix = "pyenv "
 style = "yellow"
 symbol = " "
+
+[rust]
+format = "via [${symbol}#{version_prefix}${version}]($style)"
+version_prefix = "ver "
+style = "#B7410E"
+symbol = " "
